<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_border_dialog_connect_wifi"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dialog_wifi__iv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_warning_wifi_no_pass"
            android:layout_marginStart="@dimen/_10sdp" />

        <com.binhdz.wifibooster.view.MyTextView
            android:id="@+id/dl_warning__tv_name_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/name_wifi"
            android:textColor="@color/color_black"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/_10sdp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#1C72B4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.binhdz.wifibooster.view.MyTextView
            android:id="@+id/dl_warning__tv_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/ma_hoa"
            android:textSize="14sp"
            android:layout_marginStart="@dimen/_10sdp" />

        <com.binhdz.wifibooster.view.MyTextView
            android:id="@+id/dl_warning__tv_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:singleLine="true"
            android:text="@string/fre_quency"
            android:textSize="14sp"
            android:layout_marginStart="@dimen/_10sdp" />

        <com.binhdz.wifibooster.view.MyTextView
            android:id="@+id/dl_warning__tv_mac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:singleLine="true"
            android:text="@string/mac"
            android:textSize="14sp"
            android:layout_marginStart="@dimen/_10sdp" />

        <com.binhdz.wifibooster.view.MyTextView
            android:id="@+id/dl_warning__tv_connect_before"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:singleLine="true"
            android:text="@string/connect_before"
            android:textSize="14sp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_10sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#1C72B4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.binhdz.wifibooster.view.MyTextViewBold
            android:id="@+id/dl_warning__tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_cancel"
            android:textSize="18sp" />

        <TextView android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:background="#1C72B4"/>
        <com.binhdz.wifibooster.view.MyTextViewBold
            android:id="@+id/dl_warning__tv_connect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#1C72B4"
            android:text="@string/connect_anyway"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>